@@ -54,6 +54,7 @@ documents those changes that are of interest to users and administrators.
     in PrologSlurmctld/EpilogSlurmctld.
  -- Add SRUN_EXPORT_ENV as an input environment variable to srun.
  -- Return an error for invalid #SBATCH directives, and do not submit the job.
+ -- Add S_JOB_ARRAY_ID and S_JOB_ARRAY_TASK_ID to spank_get_item.
 
 * Changes in Slurm 19.05.0pre3
 ==============================
